--- a/index.html
+++ b/index.html
@@ -11,6 +11,20 @@
       <h1>Calorie Counter</h1>
       <div class="container"></div>
     </main>
+    <form id="calorie-counter">
+      <label for="budget">Budget</label>
+      <input
+        type="number"
+        id="budget"
+        min="0"
+        placeholder="Daily calorie budget"
+        required
+      />
+      <fieldset id="breakfast">
+        <legend>Breakfast</legend>
+        <div class="input-container"></div>
+      </fieldset>
+    </form>
 
     <script src="src/scripts/script.js"></script>
   </body>
